--- a/Cadastro_Postagens/views/home.handlebars
+++ b/Cadastro_Postagens/views/home.handlebars
@@ -4,7 +4,8 @@
     <small>{{dataValues.createdAt}}</small>
     <h1> {{dataValues.titulo}}</h1>
     <p>{{dataValues.conteudo}}</p>
-
+    <a href="/deletar/{{dataValues.id}}"><button>Deletar</button></a>
+    <hr>
 {{/each}}
 
 <!-- Cria uma estrutura de repetição, iterando cada um dos objetos-->
