--- a/Projeto_Final/views/admin/categorias.handlebars
+++ b/Projeto_Final/views/admin/categorias.handlebars
@@ -7,6 +7,8 @@
         <div class="card-body">
             <h4>{{nome}}</h4>
             <small>{{slug}}</small>
+            <small>{{date}}</small>
+            <a href="/admin/categorias/edit/{{_id}}"><button class="btn btn-success">Editar</button></a>
         </div>
     </div>
 {{/each}}
