--- a/Projeto_Final/views/admin/categorias.handlebars
+++ b/Projeto_Final/views/admin/categorias.handlebars
@@ -8,7 +8,15 @@
             <h4>{{nome}}</h4>
             <small>{{slug}}</small>
             <small>{{date}}</small>
-            <a href="/admin/categorias/edit/{{_id}}"><button class="btn btn-success">Editar</button></a>
+            <br>
+            <a href="/admin/categorias/edit/{{_id}}"><button class="btn btn-success mt-4">Editar</button></a>
+            <form action="/admin/categorias/deletar" method="POST" class="mt-4">
+                <input type='hidden' name='id' value="{{_id}}">
+                <button type="submit" class="btn btn-danger">Deletar</button>
+            </form>
         </div>
     </div>
+{{else}}
+    <h4 class="mt-4">Nenhuma categoria registrada</h4>
 {{/each}}
+
