--- a/Projeto_Final/views/admin/addpostagens.handlebars
+++ b/Projeto_Final/views/admin/addpostagens.handlebars
@@ -1,7 +1,13 @@
+{{#each erros}}
+    <div class="alert alert-danger">{{texto}}</div>
+{{else}}
+
+{{/each}}
+
 <div class="card">
     <div class="card-body">
         <h4>Nova postagem</h4>
-        <form action="">
+        <form action="/admin/postagens/nova" method="POST" >
             <label for="titulo">Titulo</label>
             <input type="text" name="titulo" id="titulo" class="form-control">
             
@@ -19,7 +25,7 @@
                 {{#each categorias}}
                 <option value="{{_id}}">{{nome}}</option>
                 {{else}}
-                <option value="">Sem categorias cadastradas</option>
+                <option value="0">Sem categorias cadastradas</option>
                 {{/each}}
             </select>
 
