--- a/Projeto_Final/views/admin/postagens.handlebars
+++ b/Projeto_Final/views/admin/postagens.handlebars
@@ -10,6 +10,7 @@
             <small>Data: {{data}}</small>
             <br>
             <small>Categoria: {{categoria.nome}}</small>
+            <a href="/admin/postagens/edit/{{_id}}"><button class="btn btn-success">Editar postagem</button></a>
         </div>
     </div>
 {{else}}
