Deletando postagens, usando GET

--- a/Projeto_Final/views/admin/postagens.handlebars
+++ b/Projeto_Final/views/admin/postagens.handlebars
@@ -11,6 +11,7 @@
             <br>
             <small>Categoria: {{categoria.nome}}</small>
             <a href="/admin/postagens/edit/{{_id}}"><button class="btn btn-success">Editar postagem</button></a>
+            <a href="/admin/postagens/delet/{{_id}}"><button class="btn btn-danger">Apagar postagem</button></a>
         </div>
     </div>
 {{else}}
