--- a/Projeto_Final/views/layouts/main.handlebars
+++ b/Projeto_Final/views/layouts/main.handlebars
@@ -13,6 +13,11 @@
     {{>_navbar}}
     <!-- Adicionamos um componente, o sinal de >, indica que é um arquivo da pasta partials -->
     <div class="container mt-4">
+        {{#if error}}
+            <div class="alert alert-danger">{{error}}</div>
+        {{else}}
+
+        {{/if}}
         {{>_msg}}
         {{{body}}}
     </div>
