--- a/Projeto_Final/views/usuarios/login.handlebars
+++ b/Projeto_Final/views/usuarios/login.handlebars
@@ -2,7 +2,7 @@
 
 <div class="card">
     <div class="card-body">
-        <form action="" method="POST">
+        <form action="/usuarios/login" method="POST">
             <label for="email">Email: </label>
             <input type="email" name="email" class="form-control" >
 
